--- a/package.json
+++ b/package.json
@@ -28,6 +28,7 @@
     "html-webpack-plugin": "^5.5.0",
     "mini-css-extract-plugin": "^2.6.1",
     "node-sass": "^7.0.1",
+    "path": "^0.12.7",
     "sass-loader": "^13.0.1",
     "style-loader": "^3.3.1",
     "webpack": "^5.73.0",
